k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cdata-sync
  labels:
    name: cdata-sync
